# youtube-long-form-maker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
config/: providers.yaml  settings.yaml
config/channels/: _template.yaml  channel_ai.yaml  channel_business.yaml  channel_finance.yaml  channel_health.yaml  channel_realestate.yaml  channel_stock.yaml
src/claude_code/: handlers.py  skill.py
src/cli/: main.py  produce.py
src/core/: config.py  cost_tracker.py  exceptions.py  fonts.py  korean_number.py  models.py  retry.py  state.py  text_render.py  visual_templates.py
src/growth/: ab_testing.py  analytics.py  feedback_loop.py  shorts_generator.py  tts_cache.py
src/pipeline/: base_stage.py  orchestrator.py  s1_benchmark.py  s2_script.py  s3_voice.py  s4_storyboard.py  s5_media.py  s6_editing.py  s7_thumbnail.py  s8_export.py
src/providers/: base.py  capcut.py  factory.py  image_gen.py  image_gen_openai.py  llm.py  stock_media.py  stt.py  trends.py  tts.py  upscaler.py  video_gen.py  youtube.py
src/retention/: audio_mixing.py  hook_system.py  loop_structure.py  pattern_interrupt.py  visual_keywords.py
src/templates/: __init__.py
src/templates/prompts/: benchmark_analysis.j2  image_prompt.j2  metadata.j2  script_body.j2  script_hook.j2  script_shorts.j2  storyboard_scenes.j2  thumbnail_prompt.j2  video_prompt.j2
tests/: test_cap_scene_durations.py  test_s3_voice_resume.py  test_s5_consistent_backgrounds.py  test_s6_pattern_interrupt.py  test_scene_voice_alignment.py  test_text_render.py  test_visual_beats.py
