[project]
name = "youtube-long-form-maker"
version = "0.1.0"
description = "AI-orchestrated YouTube long-form video automation system"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    # AI Providers
    "anthropic>=0.30",
    "openai>=1.0",
    "httpx>=0.27",
    "aiofiles>=24.0",
    # Media Processing
    "moviepy>=2.0",
    "Pillow>=10.0",
    "pysrt>=1.1",
    "pydub>=0.25",
    # YouTube
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    # Utilities
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
whisper = [
    "openai-whisper>=20231117",
]

[project.scripts]
ytmaker = "src.cli.main:cli"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]
